--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
   "require": {
     "cboden/ratchet": "^0.4.3",
     "ext-json": "*",
-    "react/http": "1.3"
+    "react/http": "1.3",
+    "spatie/async": "dev-master",
+    "guzzlehttp/guzzle": "7.0",
+    "ext-curl": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest"
